07-171023/ex1/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET REC var var EQ expr SEMISEMI

   4  expr : LET var EQ expr IN expr
   5       | LET REC var var EQ expr IN expr
   6       | IF expr THEN expr ELSE expr
   7       | FUN var ARROW expr
   8       | or_expr

   9  or_expr : or_expr OR and_expr
  10          | and_expr

  11  and_expr : and_expr ANDAND comp_expr
  12           | comp_expr

  13  comp_expr : arith_expr EQ arith_expr
  14            | arith_expr LT arith_expr
  15            | arith_expr

  16  arith_expr : arith_expr PLUS factor_expr
  17             | arith_expr MINUS factor_expr
  18             | factor_expr

  19  factor_expr : factor_expr TIMES app_expr
  20              | factor_expr DIV app_expr
  21              | app_expr

  22  app_expr : app_expr atomic_expr
  23           | atomic_expr

  24  atomic_expr : INT
  25              | BOOL
  26              | ID
  27              | LPAR expr RPAR

  28  var : ID

  29  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (29)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	toplevel  goto 10
	expr  goto 11
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (24)

	.  reduce 24


state 4
	atomic_expr : BOOL .  (25)

	.  reduce 25


state 5
	atomic_expr : ID .  (26)

	.  reduce 26


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . REC var var EQ expr SEMISEMI  (3)
	expr : LET . var EQ expr IN expr  (4)
	expr : LET . REC var var EQ expr IN expr  (5)

	ID  shift 19
	REC  shift 20
	.  error

	var  goto 21


state 7
	expr : FUN . var ARROW expr  (7)

	ID  shift 19
	.  error

	var  goto 22


state 8
	expr : IF . expr THEN expr ELSE expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 24
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 9
	atomic_expr : LPAR . expr RPAR  (27)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 25
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 10
	%entry% : '\001' toplevel .  (29)

	.  reduce 29


state 11
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 26
	.  error


state 12
	expr : or_expr .  (8)
	or_expr : or_expr . OR and_expr  (9)

	OR  shift 27
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	SEMISEMI  reduce 8


state 13
	or_expr : and_expr .  (10)
	and_expr : and_expr . ANDAND comp_expr  (11)

	ANDAND  shift 28
	IN  reduce 10
	OR  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10


state 14
	and_expr : comp_expr .  (12)

	.  reduce 12


state 15
	comp_expr : arith_expr . EQ arith_expr  (13)
	comp_expr : arith_expr . LT arith_expr  (14)
	comp_expr : arith_expr .  (15)
	arith_expr : arith_expr . PLUS factor_expr  (16)
	arith_expr : arith_expr . MINUS factor_expr  (17)

	PLUS  shift 29
	MINUS  shift 30
	EQ  shift 31
	LT  shift 32
	IN  reduce 15
	OR  reduce 15
	ANDAND  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15


state 16
	arith_expr : factor_expr .  (18)
	factor_expr : factor_expr . TIMES app_expr  (19)
	factor_expr : factor_expr . DIV app_expr  (20)

	TIMES  shift 33
	DIV  shift 34
	IN  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	EQ  reduce 18
	LT  reduce 18
	OR  reduce 18
	ANDAND  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	SEMISEMI  reduce 18


state 17
	factor_expr : app_expr .  (21)
	app_expr : app_expr . atomic_expr  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 21
	PLUS  reduce 21
	TIMES  reduce 21
	MINUS  reduce 21
	DIV  reduce 21
	EQ  reduce 21
	LT  reduce 21
	OR  reduce 21
	ANDAND  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	RPAR  reduce 21
	SEMISEMI  reduce 21

	atomic_expr  goto 35


state 18
	app_expr : atomic_expr .  (23)

	.  reduce 23


state 19
	var : ID .  (28)

	.  reduce 28


state 20
	toplevel : LET REC . var var EQ expr SEMISEMI  (3)
	expr : LET REC . var var EQ expr IN expr  (5)

	ID  shift 19
	.  error

	var  goto 36


state 21
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (4)

	EQ  shift 37
	.  error


state 22
	expr : FUN var . ARROW expr  (7)

	ARROW  shift 38
	.  error


state 23
	expr : LET . var EQ expr IN expr  (4)
	expr : LET . REC var var EQ expr IN expr  (5)

	ID  shift 19
	REC  shift 39
	.  error

	var  goto 40


state 24
	expr : IF expr . THEN expr ELSE expr  (6)

	THEN  shift 41
	.  error


state 25
	atomic_expr : LPAR expr . RPAR  (27)

	RPAR  shift 42
	.  error


state 26
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 27
	or_expr : or_expr OR . and_expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	and_expr  goto 43
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 28
	and_expr : and_expr ANDAND . comp_expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	comp_expr  goto 44
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 29
	arith_expr : arith_expr PLUS . factor_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	factor_expr  goto 45
	app_expr  goto 17
	atomic_expr  goto 18


state 30
	arith_expr : arith_expr MINUS . factor_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	factor_expr  goto 46
	app_expr  goto 17
	atomic_expr  goto 18


state 31
	comp_expr : arith_expr EQ . arith_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	arith_expr  goto 47
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 32
	comp_expr : arith_expr LT . arith_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	arith_expr  goto 48
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 33
	factor_expr : factor_expr TIMES . app_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	app_expr  goto 49
	atomic_expr  goto 18


state 34
	factor_expr : factor_expr DIV . app_expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	.  error

	app_expr  goto 50
	atomic_expr  goto 18


state 35
	app_expr : app_expr atomic_expr .  (22)

	.  reduce 22


state 36
	toplevel : LET REC var . var EQ expr SEMISEMI  (3)
	expr : LET REC var . var EQ expr IN expr  (5)

	ID  shift 19
	.  error

	var  goto 51


state 37
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 52
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 38
	expr : FUN var ARROW . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 53
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 39
	expr : LET REC . var var EQ expr IN expr  (5)

	ID  shift 19
	.  error

	var  goto 54


state 40
	expr : LET var . EQ expr IN expr  (4)

	EQ  shift 55
	.  error


state 41
	expr : IF expr THEN . expr ELSE expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 56
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 42
	atomic_expr : LPAR expr RPAR .  (27)

	.  reduce 27


state 43
	or_expr : or_expr OR and_expr .  (9)
	and_expr : and_expr . ANDAND comp_expr  (11)

	ANDAND  shift 28
	IN  reduce 9
	OR  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	SEMISEMI  reduce 9


state 44
	and_expr : and_expr ANDAND comp_expr .  (11)

	.  reduce 11


state 45
	arith_expr : arith_expr PLUS factor_expr .  (16)
	factor_expr : factor_expr . TIMES app_expr  (19)
	factor_expr : factor_expr . DIV app_expr  (20)

	TIMES  shift 33
	DIV  shift 34
	IN  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	EQ  reduce 16
	LT  reduce 16
	OR  reduce 16
	ANDAND  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16


state 46
	arith_expr : arith_expr MINUS factor_expr .  (17)
	factor_expr : factor_expr . TIMES app_expr  (19)
	factor_expr : factor_expr . DIV app_expr  (20)

	TIMES  shift 33
	DIV  shift 34
	IN  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	EQ  reduce 17
	LT  reduce 17
	OR  reduce 17
	ANDAND  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17


state 47
	comp_expr : arith_expr EQ arith_expr .  (13)
	arith_expr : arith_expr . PLUS factor_expr  (16)
	arith_expr : arith_expr . MINUS factor_expr  (17)

	PLUS  shift 29
	MINUS  shift 30
	IN  reduce 13
	OR  reduce 13
	ANDAND  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13


state 48
	comp_expr : arith_expr LT arith_expr .  (14)
	arith_expr : arith_expr . PLUS factor_expr  (16)
	arith_expr : arith_expr . MINUS factor_expr  (17)

	PLUS  shift 29
	MINUS  shift 30
	IN  reduce 14
	OR  reduce 14
	ANDAND  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14


state 49
	factor_expr : factor_expr TIMES app_expr .  (19)
	app_expr : app_expr . atomic_expr  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 19
	PLUS  reduce 19
	TIMES  reduce 19
	MINUS  reduce 19
	DIV  reduce 19
	EQ  reduce 19
	LT  reduce 19
	OR  reduce 19
	ANDAND  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	SEMISEMI  reduce 19

	atomic_expr  goto 35


state 50
	factor_expr : factor_expr DIV app_expr .  (20)
	app_expr : app_expr . atomic_expr  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 9
	IN  reduce 20
	PLUS  reduce 20
	TIMES  reduce 20
	MINUS  reduce 20
	DIV  reduce 20
	EQ  reduce 20
	LT  reduce 20
	OR  reduce 20
	ANDAND  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	SEMISEMI  reduce 20

	atomic_expr  goto 35


state 51
	toplevel : LET REC var var . EQ expr SEMISEMI  (3)
	expr : LET REC var var . EQ expr IN expr  (5)

	EQ  shift 57
	.  error


state 52
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (4)

	IN  shift 58
	SEMISEMI  shift 59
	.  error


state 53
	expr : FUN var ARROW expr .  (7)

	.  reduce 7


state 54
	expr : LET REC var . var EQ expr IN expr  (5)

	ID  shift 19
	.  error

	var  goto 60


state 55
	expr : LET var EQ . expr IN expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 61
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 56
	expr : IF expr THEN expr . ELSE expr  (6)

	ELSE  shift 62
	.  error


state 57
	toplevel : LET REC var var EQ . expr SEMISEMI  (3)
	expr : LET REC var var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 63
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 58
	expr : LET var EQ expr IN . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 64
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 59
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 60
	expr : LET REC var var . EQ expr IN expr  (5)

	EQ  shift 65
	.  error


state 61
	expr : LET var EQ expr . IN expr  (4)

	IN  shift 58
	.  error


state 62
	expr : IF expr THEN expr ELSE . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 66
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 63
	toplevel : LET REC var var EQ expr . SEMISEMI  (3)
	expr : LET REC var var EQ expr . IN expr  (5)

	IN  shift 67
	SEMISEMI  shift 68
	.  error


state 64
	expr : LET var EQ expr IN expr .  (4)

	.  reduce 4


state 65
	expr : LET REC var var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 69
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 66
	expr : IF expr THEN expr ELSE expr .  (6)

	.  reduce 6


state 67
	expr : LET REC var var EQ expr IN . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 23
	FUN  shift 7
	IF  shift 8
	LPAR  shift 9
	.  error

	expr  goto 70
	or_expr  goto 12
	and_expr  goto 13
	comp_expr  goto 14
	arith_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 68
	toplevel : LET REC var var EQ expr SEMISEMI .  (3)

	.  reduce 3


state 69
	expr : LET REC var var EQ expr . IN expr  (5)

	IN  shift 67
	.  error


state 70
	expr : LET REC var var EQ expr IN expr .  (5)

	.  reduce 5


26 terminals, 12 nonterminals
30 grammar rules, 71 states
